# blasphemous

./: .gitignore  LICENSE  README.md  demo_questions.py  pyproject.toml  run_fast.py  run_test.py
blasphemous/: __init__.py  __main__.py  analyze.py  benchmark.py  causal.py  cli.py  commit.py  extract.py  harmbench_loader.py  lora_ablation.py  optimize.py  pipeline.py  prompts.py  ui.py
blasphemous/analyze/: __init__.py  concept_erasure.py  geometry.py  profiling.py  visualization.py
docs/: benchmark.md  quickstart.md  release-checklist.md
examples/: aggressive_lib.py  aggressive_test.py  debug_blasphemous.py  run_60_trials.py  run_blast_safe.py  run_full_test.py  simple_lib.py
test_liberated_v040/: blasphemous_metadata.json  config.json  generation_config.json
tests/: test_aggressive.py  test_benchmark.py  test_release_assets.py  test_startup.py  test_visual.py
