[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blasphemous"
version = "0.4.0"
description = "TOP 1 Abliteration Toolkit: Optimal Transport × LoRA Ablation × Layer-Selective Targeting × Causal Verification"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Michi", email = "michi@example.com" }
]
keywords = ["llm", "abliteration", "refusal-removal", "censor-removal", "machine-learning", "transformers", "interpretability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "optuna>=3.6.0",
    "termcolor>=2.4.0",
    "tqdm>=4.66.0",
    "accelerate>=0.28.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
quantization = ["bitsandbytes>=0.43.0"]
research = ["pacmap>=0.7.0", "matplotlib>=3.8.0", "scikit-learn>=1.4.0"]
all = ["blasphemous[quantization,research]"]

[project.scripts]
blasphemous = "blasphemous.cli:main"

[project.urls]
Homepage = "https://github.com/michi/blasphemous"
Repository = "https://github.com/michi/blasphemous"
Issues = "https://github.com/michi/blasphemous/issues"

[tool.hatch.build.targets.wheel]
packages = ["blasphemous"]
